--- a/.env
+++ b/.env
@@ -26,3 +26,16 @@ APP_SECRET=31a4d9c362c05027ca3f511ddfcec6de
 DATABASE_URL="mysql://db:db@db:3306/db"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
+
+###> symfony/mailgun-mailer ###
+# MAILER_DSN=mailgun://KEY:DOMAIN@default?region=us
+# MAILER_DSN=mailgun+smtp://USERNAME:PASSWORD@default?region=us
+###< symfony/mailgun-mailer ###
+
+MAILER_DSN=smtp://53166fcd992e26:b7833ae6af0e4a@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
+# TODO logindaten hier hinterlegen!
+#MAILER_DSN=smtp://usernamefromMailtrap:passwordFromMailtrap@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
