--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/mailer": "5.3.*",
+        "symfony/mailgun-mailer": "5.3.*",
         "symfony/maker-bundle": "^1.31",
         "symfony/mime": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
@@ -27,7 +29,8 @@
         "symfony/twig-bundle": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*",
         "symfony/yaml": "5.3.*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/cssinliner-extra": "^3.3",
+        "twig/extra-bundle": "^3.3",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
