--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
+        "easycorp/easyadmin-bundle": "^3.3",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
@@ -18,6 +19,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/http-client": "5.3.*",
         "symfony/mailer": "5.3.*",
         "symfony/mailgun-mailer": "5.3.*",
         "symfony/maker-bundle": "^1.31",
@@ -27,6 +29,7 @@
         "symfony/security-bundle": "5.3.*",
         "symfony/stopwatch": "5.3.*",
         "symfony/twig-bundle": "5.3.*",
+        "symfony/validator": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*",
         "symfony/yaml": "5.3.*",
         "twig/cssinliner-extra": "^3.3",
