--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,3 +37,4 @@ security:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/gericht, roles: ROLE_USER }
         - { path: ^/reg, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_USER }
